--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: serinus_swagger
 description: A sample command-line application.
-version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+version: 0.0.1
+repository: https://github.com/serinus-nest/serinus_swagger
+homepage: https://docs.serinus.app/plugins/swagger
+documentation: https://docs.serinus.app/plugins/swagger
 
 environment:
   sdk: ^3.3.3
